
    * Add "?" as a supported wildcard character in
      service name patterns
      ("?" will never match the next character in the string and
       is unable to be the last character in the string,
       i.e. "/?/" matches "/a/" but never "/a/b/" while
       "/*/" will match either with preference for the shortest)
    * Update cpg
    * Fix elli preprocessor use

2018-12-10 Michael Truog   <mjtruog at protonmail dot com>

    * Add cloudi_service_name:pattern/1 function to have the
      service name pattern wildcard character check in a single place
    * Update trie

2018-12-04 Michael Truog   <mjtruog at protonmail dot com>

    * Update pgsql (to 26.0.2)
    * Update epgsql (to 4.2.1)

2018-12-03 Michael Truog   <mjtruog at protonmail dot com>

    * Update hackney (to 1.14.3)
    * Update certifi
    * Update idna
    * Update ssl_verify_fun
    * Update unicode_util_compat

2018-12-01 Michael Truog   <mjtruog at protonmail dot com>

    * Fix cowboy1 stacktrace syntax
    * Update elli (to 3.1.0)
    * Update jsx (to 2.8.3)

2018-11-30 Michael Truog   <mjtruog at protonmail dot com>

    * Update cowboy (to 1.1.2)
    * Update cowlib
    * Update ranch
    * Fixed cloudi_service_filesystem and cloudi_service_http_client
      tests for cowboy 1.1.2
    * Move all cowboy related source code to have a "1" suffix on
      module names, to avoid future conflicts with cowboy 2.x modules
      (cloudi_service_http_cowboy1, cowboy1, cowlib1, ranch1,
       with cow_ prefix modules becoming cow1_)

2018-11-14 Michael Truog   <mjtruog at protonmail dot com>

    * Update exometer
    * Update exometer_core, parse_trans and setup
    * Update exometer_influxdb
    * Update folsom and bear
    * Update hut

2018-11-12 Michael Truog   <mjtruog at protonmail dot com>

    * Fix locally registered name race condition in proper_statem
      tests used by trie and pqueue
      (requires Erlang/OTP >= 18.0, currently using Erlang/OTP >= 19.3)
