@@ -1,3 +1,5 @@
-{deps, []}.
-{erl_opts, [debug_info]}.
+%-*-Mode:erlang;coding:utf-8;tab-width:4;c-basic-offset:4;indent-tabs-mode:()-*-
+% ex: set ft=erlang fenc=utf-8 sts=4 ts=4 sw=4 et nomod:
+
+{erl_opts, [deterministic, debug_info]}.
 {cover_enabled, true}.
