@@ -1,3 +1,4 @@
-{erl_opts, [debug_info
+{erl_opts, [deterministic
+           ,debug_info
            ,{platform_define, "^[2-9]", 'OTP_20_AND_ABOVE'}
            ]}.
