@@ -1,4 +1,4 @@
 %-*-Mode:erlang;coding:utf-8;tab-width:4;c-basic-offset:4;indent-tabs-mode:()-*-
 % ex: set ft=erlang fenc=utf-8 sts=4 ts=4 sw=4 et nomod:
 
-{erl_opts, [debug_info,warn_export_all,warn_export_vars,warn_shadow_vars,warn_obsolete_guard,warn_missing_spec]}.
+{erl_opts, [deterministic,debug_info,warn_export_all,warn_export_vars,warn_shadow_vars,warn_obsolete_guard,warn_missing_spec]}.
