@@ -2,5 +2,5 @@
 % ex: set ft=erlang fenc=utf-8 sts=4 ts=4 sw=4 et nomod:
 
 {erl_first_files, ["src/elli_handler.erl"]}.
-{erl_opts, [debug_info, {i, "include"}, {platform_define, "^2", binary_http_uri}]}.
+{erl_opts, [deterministic, debug_info, {i, "include"}, {platform_define, "^2", binary_http_uri}]}.
 {xref_checks, [undefined_function_calls,locals_not_used]}.
