@@ -6,6 +6,7 @@
 
 {erl_opts,
  [
+  deterministic,
   debug_info,
   {d, 'HUT_CUSTOM'},
   {d, 'HUT_CUSTOM_CB', 'cloudi_logger_hut'},
