@@ -9,6 +9,7 @@
 
 {erl_opts,
  [
+  deterministic,
   debug_info,
   fail_on_warning,
   {d, rand_module},
