@@ -2,6 +2,7 @@
 % ex: set ft=erlang fenc=utf-8 sts=4 ts=4 sw=4 et nomod:
 
 {erl_opts,
- [debug_info,
+ [deterministic,
+  debug_info,
   {d, 'HUT_CUSTOM'},
   {d, 'HUT_CUSTOM_CB', 'cloudi_logger_hut'}]}.
