@@ -1,5 +1,6 @@
 {erl_opts,
  [
+  deterministic,
   debug_info,
   {d, use_rand},
   {d, use_update_counter_4}
