@@ -1,7 +1,8 @@
 %% -*- tab-width: 4;erlang-indent-level: 4;indent-tabs-mode: nil -*-
 %% ex: ft=erlang ts=4 sw=4 et
 
-{erl_opts, [debug_info,
+{erl_opts, [deterministic,
+            debug_info,
             {d, namespaced_types}
            ]}.
 
