@@ -1,1 +1,1 @@
-{erl_opts, [debug_info,warn_export_vars,warn_shadow_vars,warn_obsolete_guard]}.
+{erl_opts, [deterministic,debug_info,warn_export_vars,warn_shadow_vars,warn_obsolete_guard]}.
