@@ -2,4 +2,5 @@
 % ex: set ft=erlang fenc=utf-8 sts=4 ts=4 sw=4 et nomod:
 
 {erl_opts,
- [debug_info]}.
+ [deterministic,
+  debug_info]}.
