@@ -1,2 +1,2 @@
 {edoc_opts, [{preprocess, true}]}.
-{erl_opts, [debug_info]}.
+{erl_opts, [deterministic, debug_info]}.
