@@ -1,10 +1,7 @@
 %-*-Mode:erlang;coding:utf-8;tab-width:4;c-basic-offset:4;indent-tabs-mode:()-*-
 % ex: set ft=erlang fenc=utf-8 sts=4 ts=4 sw=4 et nomod:
 
-{require_otp_vsn, "17|18|19|20|21"}.
-
-{erl_opts, [fail_on_warning, debug_info, warn_untyped_record]}.
-%%, {parse_transform, eqc_cover}]}.
+{erl_opts, [deterministic, fail_on_warning, debug_info, warn_untyped_record]}.
 
 {xref_checks, [undefined_function_calls]}.
 {cover_enabled, true}.
@@ -21,15 +18,3 @@
    [{plugins, [rebar3_eqc]}]
   }]}.
 
-%% {port_sources, ["c_src/*.c"]}.
-%% {port_env, [
-%% 	     %% Make sure to set -fPIC when compiling leveldb
-%%              {"CFLAGS", "$CFLAGS -Wall -O3 -fPIC"},
-%%              {"CXXFLAGS", "$CXXFLAGS -Wall -O3 -fPIC"},
-%%              {"DRV_CFLAGS", "$DRV_CFLAGS -O3 -Wall -I c_src/msgpack-0.5.7/src"},
-%%              {"DRV_LDFLAGS", "$DRV_LDFLAGS c_src/msgpack-0.5.7/src/.libs/libmsgpack.a"}
-%%              ]}.
-
-%% {pre_hooks,  [{compile, "sh c_src/build.sh"}]}.
-
-%% {post_hooks, [{clean, "rm -rf c_src/msgpack-0.5.7"}]}.
