@@ -2,7 +2,9 @@
 % ex: set ft=erlang fenc=utf-8 sts=4 ts=4 sw=4 et nomod:
 
 {erl_opts,
- [warnings_as_errors,
+ [deterministic,
+  debug_info,
+  warnings_as_errors,
   {platform_define, "^19\.", 'ERLANG_OTP_VERSION_19'},
   {platform_define, "^20\.", 'ERLANG_OTP_VERSION_20'},
   {platform_define, "^21\.", 'ERLANG_OTP_VERSION_21'},
