@@ -20,5 +20,5 @@
   "src/cloudi_x_parse_trans_pp.erl",
   "src/cloudi_x_parse_trans_codegen.erl"]}.
 
-{erl_opts, [debug_info]}.
+{erl_opts, [deterministic, debug_info]}.
 {xref_checks, [undefined_function_calls]}.
