@@ -1,2 +1,3 @@
-{erl_opts, [debug_info,
+{erl_opts, [deterministic,
+            debug_info,
             {platform_define, "^[2-9]", 'OTP20'}]}.
