@@ -29,7 +29,7 @@
 %%%
 %%% @author Michael Truog <mjtruog at protonmail dot com>
 %%% @copyright 2014-2018 Michael Truog
-%%% @version 1.7.4 {@date} {@time}
+%%% @version 1.7.5 {@date} {@time}
 %%%------------------------------------------------------------------------
 
 -module(cloudi_service_SUITE).
@@ -546,7 +546,8 @@ t_service_internal_sync_1(_Config) ->
                                    ServiceName,
                                    ?REQUEST2),
     true = cloudi_x_uuid:is_v1(TransId2),
-    true = (TransId2 > TransId1),
+    true = (cloudi_x_uuid:get_v1_time(TransId2) >
+            cloudi_x_uuid:get_v1_time(TransId1)),
     {error,
      {service_internal_start_failed,
       {error, invalid_state}}} = cloudi_service_api:services_add([
@@ -631,7 +632,8 @@ t_service_internal_async_1(_Config) ->
                                    ?REQUEST2),
     true = (Timeout2 > (TimeoutMax - 1000)) andalso (Timeout2 =< TimeoutMax),
     true = cloudi_x_uuid:is_v1(TransId2),
-    true = (TransId2 > TransId1),
+    true = (cloudi_x_uuid:get_v1_time(TransId2) >
+            cloudi_x_uuid:get_v1_time(TransId1)),
     {error,
      {service_internal_start_failed,
       {error, invalid_state}}} = cloudi_service_api:services_add([
@@ -665,9 +667,12 @@ t_service_internal_async_2(_Config) ->
      Context4} = cloudi:recv_async(Context3, <<0:128>>),
     {{ok, ?RESPONSE_INFO1, ?RESPONSE1, TransId4},
      Context5} = cloudi:recv_async(Context4, <<0:128>>),
-    true = (TransId1 < TransId2) andalso
-           (TransId2 < TransId3) andalso
-           (TransId3 < TransId4),
+    true = (cloudi_x_uuid:get_v1_time(TransId1) <
+            cloudi_x_uuid:get_v1_time(TransId2)) andalso
+           (cloudi_x_uuid:get_v1_time(TransId2) <
+            cloudi_x_uuid:get_v1_time(TransId3)) andalso
+           (cloudi_x_uuid:get_v1_time(TransId3) <
+            cloudi_x_uuid:get_v1_time(TransId4)),
     {{ok,
       [{'send_async', ServiceName, ServiceName, ?REQUEST_INFO1, ?REQUEST1,
         Timeout1, 0, TransId1, Self},
@@ -700,9 +705,12 @@ t_service_internal_async_2(_Config) ->
        {?RESPONSE_INFO1, ?RESPONSE1, TransId7},
        {?RESPONSE_INFO1, ?RESPONSE1, TransId8}]},
      Context8} = cloudi:recv_asyncs(Context7, TransIds),
-    true = (TransId5 < TransId6) andalso
-           (TransId6 < TransId7) andalso
-           (TransId7 < TransId8),
+    true = (cloudi_x_uuid:get_v1_time(TransId5) <
+            cloudi_x_uuid:get_v1_time(TransId6)) andalso
+           (cloudi_x_uuid:get_v1_time(TransId6) <
+            cloudi_x_uuid:get_v1_time(TransId7)) andalso
+           (cloudi_x_uuid:get_v1_time(TransId7) <
+            cloudi_x_uuid:get_v1_time(TransId8)),
     {{ok,
       [{'send_async', ServiceName, ServiceName, ?REQUEST_INFO1, ?REQUEST1,
         Timeout5, 0, TransId5, Self},
@@ -740,9 +748,12 @@ t_service_internal_async_3(_Config) ->
        {?RESPONSE_INFO1, ?RESPONSE1, TransId3},
        {?RESPONSE_INFO1, ?RESPONSE1, TransId4}]},
      _Context1} = cloudi:send_sync(Context0, ServiceName, ?REQUEST3),
-    true = (TransId1 < TransId2) andalso
-           (TransId2 < TransId3) andalso
-           (TransId3 < TransId4),
+    true = (cloudi_x_uuid:get_v1_time(TransId1) <
+            cloudi_x_uuid:get_v1_time(TransId2)) andalso
+           (cloudi_x_uuid:get_v1_time(TransId2) <
+            cloudi_x_uuid:get_v1_time(TransId3)) andalso
+           (cloudi_x_uuid:get_v1_time(TransId3) <
+            cloudi_x_uuid:get_v1_time(TransId4)),
     true = cloudi_x_uuid:is_v1(TransId1),
     true = cloudi_x_uuid:is_v1(TransId2),
     true = cloudi_x_uuid:is_v1(TransId3),
